Исправление недочётов(версия 2.0)

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -90,6 +90,7 @@ header
     background-position: center
     background-repeat: no-repeat
     height: 412px
+    width: 550px
     img
       margin-left: 23px
       width: 26px!important
@@ -221,24 +222,24 @@ header
 // Услуги
 .uslugi
   .tabs
-    .uslugi-tabs
-      background-position: center
-      background-repeat: no-repeat
-      padding: 0 40px
-      &:nth-child(1)
-        background-image: url("../img/dest/uslugi-tabs-guest.png")
-      &:nth-child(2)
-        background-image: url("../img/dest/uslugi-tabs-nn.png")
-      &:nth-child(3)
-        background-image: url("../img/dest/uslugi-tabs-rus.png")
-      &:nth-child(4)
-        background-image: url("../img/dest/uslugi-tabs-sober.png")
-      .tabs-title
-        margin-top: 46px
-      .tabs-text
-        margin-top: 38px
-        border-top: 0.5px white solid
-        padding-top: 20px
+    .uslugi-tabs-1
+      background-image: url("../img/dest/uslugi-tabs-guest.png")
+      padding: 0 30px
+    .uslugi-tabs-2
+      background-image: url("../img/dest/uslugi-tabs-nn.png")
+      padding: 0 30px
+    .uslugi-tabs-3
+      background-image: url("../img/dest/uslugi-tabs-rus.png")
+      padding: 0 30px
+    .uslugi-tabs-4
+      background-image: url("../img/dest/uslugi-tabs-sober.png")
+      padding: 0 30px
+    .tabs-title
+      padding-top: 46px
+    .tabs-text
+      margin-top: 38px
+      border-top: 0.5px white solid
+      padding: 20px 0
 
 //заказ
 .zakaz-taxi
