--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -88,19 +88,16 @@ header
       &:hover
         .links-submenu
           display: block !important
-          margin-top: -10px
-          padding-top: -10px
+          margin-top: -2px
+          padding-top: -2px
           top: 90%
           left: 0
+          z-index: 2
           li
             a
               white-space: nowrap
               text-decoration: none
               color: #000000
-
-
-
-
   .header-phone
     img
       width: 20px
@@ -230,6 +227,8 @@ header
   background-repeat: no-repeat
   .sober-right
     background-color: white
+    margin-top: 35px
+    height: 330px
     .zakaz-taxi-form
       width: 320px
       height: 84px
