--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -3,7 +3,7 @@
 $accent: orange // Accent Color
 $fontsize: 16px // Body Font Size
 $textcolor: #333 // Text Color
-$lineheight: 1.65 // Document Line Height
+$lineheight: 1.2 // Document Line Height
 $userfont: Roboto, sans-serif // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
 $gilroy: Gilroy, sans-serif // Gilroy Font Family
@@ -20,6 +20,7 @@ $gutter: $grid-gutter-width
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
 @import '../libs/bootstrap-4.5.2-dist/css/bootstrap.min.css'
 @import '../libs/fontawesome-5-pro-master/css/all.css'
+@import '../libs/mmenu-light-master/dist/mmenu-light.css'
 // FONTS LOAD SECTION
 
 @mixin font($fname, $fstyle, $fweight, $furl)
