--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -32,10 +32,8 @@
 
 .fs48
   font-size: 48px
-.lh1
-  line-height: 1.1
 .bg-light
-  backgound-color: #E5E5E5!important
+  background-color: #E5E5E5!important
 .wsn
   white-space: nowrap
 //Главная страница
@@ -62,20 +60,25 @@ body
     font-weight: bold
     border: 1px solid #F69B33
     background: #FFFFFF
+    padding-left: 10px
     &::placeholder
       color: #000000
       font-size: 24px
       font-weight: bold
-      padding-left: 22px
   textarea
+    height: 100%
     font-size: 24px
     font-weight: bold
     border: 1px solid #F69B33
+    padding: 27px 0 0 22px
+    resize: none
     &::placeholder
       color: #000000
       font-size: 24px
       font-weight: bold
-      padding: 27px 0 0 22px
+  .btn
+    line-height: $lineheight
+
 //Шапка
 header
   .links
@@ -110,32 +113,34 @@ header
     background-size: cover
     background-position: center
     background-repeat: no-repeat
-    height: 412px
     width: 100%
-    img
-      margin-left: 23px
-      width: 26px!important
     .right-side-element
-      &:nth-child(1)
-        padding: 39px 18px 0 0
-      &:nth-child(2)
-        padding: 25px 18px 0 0
-      &:nth-child(3)
-        padding: 25px 18px 0 0
-      &:nth-child(4)
-        padding: 25px 18px 0 0
-      &:nth-child(5)
-        padding: 25px 18px 0 0
-      &:nth-child(6)
-        padding: 25px 18px 0 0
-      &:nth-child(7)
-        padding: 25px 18px 0 0
+      font-weight: bold
+      align-items: center
+      width: 100%
+      display: flex
+      justify-content: flex-end
+      img
+        margin-left: 10px
+  .left-side
+    .button-section
+      position: relative
+      &::before, &::after
+        content: ''
+        position: absolute
+        width: 200%
+        height: 100%
+        top: 0
+        left: -200%
+        background-color: #E5E5E5
+      &::after
+        left: initial
+        right: -200%
+        display: none
   .up-button-text
     width: 100%
-    //margin-top: 96px
   .btn-orange
     width: 100%
-    height: 80px
     background-color: #F69B33
     font-size: 24px
     color: white
@@ -144,14 +149,14 @@ header
 //Страница Контакты
 .contacts
   background-image: url("../img/dest/contacts-bg.png")
+  background-size: cover
   background-position: center
   background-repeat: no-repeat
   .contacts-left
-    margin-right: 25px
     .cont-email
       background-color: white
-      width: 505px
-      height: 180px
+      height: 100%
+      width: 100%
       .cont-img
         background-color: #F69B33
         width: 25px
@@ -160,166 +165,93 @@ header
           width: 15px
   .contacts-right
     background-color: black
-    width: 711px
-    height: 484px
-    padding: 0 20px
-    .cont-form-fields
-      .cont-name-tel
-        input
-          width: 320px
-          height: 84px
-          border: 1px solid #F69B33
-          background: #FFFFFF
-          &::placeholder
-            color: #000000
-            font-size: 24px
-            font-weight: bold
-            padding-left: 22px
-      .cont-comment
-        textarea
-          resize: none
-          border: 1px solid #F69B33
-          &::placeholder
-            color: #000000
-            font-size: 24px
-            font-weight: bold
-            padding: 27px 0 0 22px
-      .cont-button
-        .btn-orange
-          width: 295px
-          height: 84px
-          border: 1px solid #F69B33
-//стили контента на страницах услуг
-.gt-rate
-  .gt-rate-tabs
-    .rate-tabs
-      width: 295px
-      height: 330px
-      margin: 0 10px
-      padding: 0 20px
-      .rate-title
-        margin-top: 35px
-  .rate-title-price
-    border-top: 1px solid black
-  .rate-button
-    .btn-orange
-      margin: 30px 10px 0 10px
-      width: 295px
-      height: 84px
 //Страница такси для гостей
 .guest-taxi
   background-image: url("../img/dest/guest-taxi-bg.png")
+  background-size: cover
   background-position: center
   background-repeat: no-repeat
 
 // Страница такси для местных
 .local-taxi
   background-image: url("../img/dest/taxi-local-bg.png")
+  background-size: cover
   background-position: center
   background-repeat: no-repeat
 // Страница такси по области
 .area-taxi
   background-image: url("../img/dest/taxi-area-bg.png")
+  background-size: cover
   background-position: center
   background-repeat: no-repeat
+
 //Страница трезвый водитель
 .sober-driver
   background-image: url("../img/dest/sober-driver-bg.png")
+  background-size: cover
   background-position: center
   background-repeat: no-repeat
-  .sober-right
-    background-color: white
-    margin-top: 35px
-    height: 330px
-    .zakaz-taxi-form
-      width: 320px
-      height: 84px
-    .zakaz-taxi-checkbox
-      width: 22px
-      height: 22px
-  .btn-orange
-    width: 295px
-    height: 84px
+
 // Услуги
 .uslugi
   .uslugi-item
     background-size: cover
     background-position: center
-//заказ
-.zakaz-taxi
-  .zakaz-taxi-form
-    width: 260px
-    height: 84px
-    border: 1px #F69B33 solid
-    margin: 30px 10px 0 10px
-    font-size: 24px
-    font-weight: bold
-    padding-left: 22px
-    &::placeholder
-      color: black
-  .btn-orange
-    margin: 30px 10px 0 10px
-    width: 260px
-    height: 84px
-  .zakaz-taxi-checkbox
-    width: 22px
-    height: 22px
-    margin: 34px 0 0 10px
-    background: white
-  .checkbox-text
-    margin: 30px 0 0 13px
-//Почему мы
-.why-us
-  .why-us-tabs-section
-    margin-top: 55px
 //Тарифы
 .rate
   background-image: url("../img/dest/rate-background.png")
   background-size: cover
-  .rate-block
-    .rate-tabs-section
-      .rate-button
-        .btn-orange
-          width: 255px
-          height: 84px
-
-//Мы первые
-.first-content
-  margin-top: 52px
-  .first-content-text
-    margin-right: 20px
-
+// Первые в нижнем
+.first
+  .first-content
+    .first-content-text
+      position: relative
+      &::before
+        content: ''
+        position: absolute
+        width: 200%
+        height: 100%
+        top: 0
+        left: -200%
+        background-color: #E5E5E5
+    .first-content-photo
+      .bg
+        background-image: url("../img/dest/first-content-img.png")
+        height: 100%
+        width: 100%
+        background-size: cover
+        background-position: center
+        background-repeat: no-repeat
 //Мы не только такси
 .not-taxi
+  overflow: hidden
   .not-taxi-content
-    margin-top: 30px
-  .not-taxi-text
-    margin-left: 30px
+    .not-taxi-photo
+      .bg
+        background-image: url("../img/dest/not-taxi-img.png")
+        height: 100%
+        width: 100%
+        background-size: cover
+        background-position: center
+        background-repeat: no-repeat
+    .not-taxi-text
+      position: relative
+      &::before
+        content: ''
+        position: absolute
+        width: 200%
+        height: 100%
+        top: 0
+        right: -200%
+        background-color: #E5E5E5
 //Свяжитесь с нами
 .contact-us
   .contact-form
     background-image: url("../img/dest/contact-us-bg.png")
+    background-size: cover
     background-position: center
     background-repeat: no-repeat
-    height: 327px
-    .contact-form-fields
-      .contact-name-tel
-        input
-          width: 400px
-          height: 84px
-      .contact-comment
-        textarea
-          resize: none
-          margin-left: 20px
-      .contact-button
-        margin-bottom: 40px
-        .btn-orange
-          margin-left: 20px
-          width: 270px
-          height: 84px
-        .contact-button-policity
-          margin: 10px 0 0 20px
-          padding: 0 5px
+    height: 100%
 // Подвал
 footer
   background-color: black
@@ -332,6 +264,10 @@ footer
 
 // медиа запросы
 @media (max-width: 1199.98px)
+  .left-side
+    .left-side-text
+      h2, span
+        font-size: 40px
   .right-side-text
     h2, span
       font-size: 36px
@@ -339,27 +275,102 @@ footer
     .footer-links
       a
         font-size: 16px
+  .uslugi
+    h1
+      font-size: 30px
+  .contacts
+    .contacts-right
+      textarea
+        height: 110px
 
 @media (max-width: 991.98px)
-  .left-side
-    h2, span
-      font-size: 30px
-    .up-button-text
-      margin-top: 50px
-    .btn-orange
-      font-size: 18px
+ .fs48
+   font-size: 32px
+ .first-content-photo
+   .bg
+     .bg-vertical
+      background-image: url("../img/dest/first-content-img.png")
+      background-size: cover
+      background-position: center
+      background-repeat: no-repeat
+      height: 269px
+      width: 100%
+ .not-taxi-photo
+   .bg
+     .bg-vertical
+       background-image: url("../img/dest/not-taxi-img.png")
+       background-size: cover
+       background-position: center
+       background-repeat: no-repeat
+       height: 269px
+       width: 100%
+
 
 //@media (max-width: 767.98px)
 
 @media (max-width: 575.98px)
+  .fs48
+    font-size: 26px!important
+
+  .fs24
+    font-size: 20px
+
+  .banner
+    .left-side
+      overflow: hidden
+      .button-section
+        &::after
+          content: ''
+          display: block
+    .right-side
+      .right-side-element
+        padding: 2px 0
+  .phone
+    a
+      font-size: 18px
+    p
+      font-size: 14px
+    img
+      width: 18px
   .footer-copyright
     p
       font-size: 11px
       white-space: nowrap
 
 @media (max-width: 359.98px)
+  .phone
+    a
+      font-size: 12px
+    p
+      font-size: 10px
+    img
+      width: 12px
+  .left-side
+    overflow: hidden
+    .button-section
+      &::after
+        content: ''
+        display: block
+    .left-side-text
+      h2, span
+        font-size: 24px
+      p
+        font-size: 18px
+  .right-side
+    .right-side-element
+      p
+        font-size: 14px
+  .zakaz-taxi-title
+    h3
+      font-size: 20px
+  .contacts
+    .contacts-left
+      .cont-email-element
+        a, span
+          font-size: 18px
   .footer-copyright
     p
       font-size: 8px
       white-space: nowrap
+
 
