ещё правки богу правок

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -326,12 +326,13 @@ footer
       .right-side-element
         padding: 2px 0
   .phone
+    margin-top: 10px
     a
-      font-size: 18px
+      font-size: 15px
     p
-      font-size: 14px
+      font-size: 12px
     img
-      width: 18px
+      width: 15px
   .footer-copyright
     p
       font-size: 11px
@@ -339,6 +340,7 @@ footer
 
 @media (max-width: 359.98px)
   .phone
+    margin-top: 10px
     a
       font-size: 12px
     p
