--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -284,6 +284,10 @@ footer
         height: 110px
 
 @media (max-width: 991.98px)
+ .phone
+   p
+     white-space: nowrap
+
  .fs48
    font-size: 32px
  .first-content-photo
@@ -326,11 +330,11 @@ footer
       .right-side-element
         padding: 2px 0
   .phone
-    margin-top: 10px
     a
       font-size: 15px
     p
       font-size: 12px
+      white-space: nowrap
     img
       width: 15px
   .footer-copyright
@@ -340,11 +344,11 @@ footer
 
 @media (max-width: 359.98px)
   .phone
-    margin-top: 10px
     a
       font-size: 12px
     p
       font-size: 10px
+      white-space: nowrap
     img
       width: 12px
   .left-side
