тёмкины доп квесты вариант 2

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -289,7 +289,9 @@ footer
      white-space: nowrap
 
  .fs48
-   font-size: 32px
+   font-size: 30px
+ .fs24
+   font-size: 18px
  .first
     overflow: hidden
     position: relative
