тёмкины доп квесты вариант 3

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -289,9 +289,12 @@ footer
      white-space: nowrap
 
  .fs48
-   font-size: 30px
+   font-size: 30px!important
  .fs24
    font-size: 18px
+ .banner
+   .btn-orange
+     font-size: 18px
  .first
     overflow: hidden
     position: relative
