тёмкины доп квесты вариант 5

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -261,6 +261,11 @@ footer
       width: 238px
       height: 132px
 
+//Модальное окно
+.modal-body
+  .btn-orange
+    font-size: 18px
+
 
 // медиа запросы
 @media (max-width: 1199.98px)
